# arnab

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/basic/: config.yaml  data.duckdb  orders_per_product.sql  source_orders.sql
src/: errors.rs  graphviz.rs  main.rs  node.rs  session.rs
