[package]
name = "arnab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
duckdb = { version="0.9.2", features=["bundled"]}
glob = "0.3.1"
regex = "1.10.3"
serde = {version="1.0.195", features=["derive"]}
serde_yaml = "0.9.30"
tera = "1.19.1"

[profile.release]
opt-level = 'z'
lto = true
strip = true
